Bug 98009 - missing CAP_POINTER on "Mad Catz Wired Xbox 360 Controller"
Summary: missing CAP_POINTER on "Mad Catz Wired Xbox 360 Controller"
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: libinput (show other bugs)
Version: 1.5.0
Hardware: All All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-02 04:34 UTC by Aaron Paden
Modified: 2016-11-02 21:13 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
evemu-record for Mad Catz Wired XBox 360 Controller (37.19 KB, text/plain)
2016-11-02 00:29 UTC, Aaron Paden
Details

Description Aaron Paden 2016-10-02 04:34:17 UTC
I'm getting the following error in the logs. It said it's a libinput bug so I figured I should report it, but it doesn't appear to actually prevent me from using my gamepad, at least on xwayland games.

Oct 01 22:51:00 arch-tower0 org.gnome.Shell.desktop[661]: libinput error: libinput bug: Event for missing capability CAP_POINTER on device "Mad Catz Wired Xbox 360 Controller"
Comment 1 Peter Hutterer 2016-10-11 09:07:06 UTC
hmm, that one shouldn't even be added by libinput. please attach the output from sudo evemu-record against that device so I can reproduce it here, thanks.
Comment 2 Peter Hutterer 2016-11-01 21:59:26 UTC
ping?
Comment 3 Aaron Paden 2016-11-02 00:29:33 UTC
Created attachment 127680 [details]
evemu-record for Mad Catz Wired XBox 360 Controller

Sorry, work has been hectic.
Comment 5 Peter Hutterer 2016-11-02 21:13:25 UTC
commit a58a9de70d7bc963006ba9ded049a2b97f0cdadd
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Wed Nov 2 10:45:39 2016 +1000

    evdev: actually ignore joysticks


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.